--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -4,13 +4,17 @@
 
 {% block body %}
     <div class="w-full px-10 py-6 mx-auto drop-zone loopple-min-height-78vh text-slate-500">
-        <div class="flex flex-wrap -mx-3 mb-5 removable">
-            <h1>Project - {{ project.id }} - Template: {{ project.type }}</h1>
-            {% for wallet in project.wallets %}
-                Type: {{ wallet.function }} <br />
-                Seed: {{ wallet.seed }} <br />
-                Address: {{ wallet.address }} <br />
-            {% endfor %}
+        <div class="mb-5 removable">
+            <h1 style="display: block">Project - {{ project.id }} - Template: {{ project.type }}</h1>
+            <div>
+                {% for wallet in project.wallets %}
+                    <div>
+                        Type: {{ wallet.function }} <br />
+                        Seed: {{ wallet.seed }} <br />
+                        Address: {{ wallet.address }} <br />
+                    </div>
+                {% endfor %}
+            </div>
         </div>
     </div>
 {% endblock %}
