- Fixed navigation - Added scripts handling

--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -49,7 +49,7 @@
             <!-- menu item -->
             <div>
                 <span class="select-none flex items-center px-4 py-[.775rem] cursor-pointer my-[.4rem] rounded-[.95rem]">
-                    <a href="" class="flex items-center flex-grow text-[1.15rem] dark:text-neutral-400/75 text-stone-500 hover:text-dark">Dashboard</a>
+                    <a href="/" class="flex items-center flex-grow text-[1.15rem] dark:text-neutral-400/75 text-stone-500 hover:text-dark">Dashboard</a>
                 </span>
             </div>
 
@@ -57,14 +57,14 @@
             <!-- menu item -->
             <div>
                 <span class="select-none flex items-center px-4 py-[.775rem] cursor-pointer my-[.4rem] rounded-[.95rem]">
-                    <a href="" class="flex items-center flex-grow text-[1.15rem] dark:text-neutral-400/75 text-stone-500 hover:text-dark">Templates</a>
+                    <a href="/templates" class="flex items-center flex-grow text-[1.15rem] dark:text-neutral-400/75 text-stone-500 hover:text-dark">Templates</a>
                 </span>
             </div>
 
             <!-- menu item -->
             <div>
                 <span class="select-none flex items-center px-4 py-[.775rem] cursor-pointer my-[.4rem] rounded-[.95rem]">
-                    <a href="" class="flex items-center flex-grow text-[1.15rem] dark:text-neutral-400/75 text-stone-500 hover:text-dark">Projects</a>
+                    <a href="/projects" class="flex items-center flex-grow text-[1.15rem] dark:text-neutral-400/75 text-stone-500 hover:text-dark">Projects</a>
                 </span>
             </div>
 
